# UKIS_sat2h5

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
tests/: conftest.py  conversion_test.py  tiling_test.py
ukis_sat2h5/: __init__.py  __main__.py  conversion.py  tiling.py
